Added some printf to ass2.acc: it works! Added binaries & accent-generateds to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,13 @@
 # Flex output
 lex.yy.c
 
+# Accent output
+yygrammar.h
+yygrammar.c
+
 #autosave files
 [#]*[#] 
+
+accent/accent/accent
+ass1
+ass2
